Mon Jul 10 00:38:11 CEST 2006  Guillaume Desmottes <cass@skynet.be>
	
	* src/fe-gnome/navigation-tree.c:
	  - Code cleaning to fix a crash when adding the first autojoin
	    channel.

Sun Jul  9 22:38:36 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/conversation-panel.c:
	* src/fe-gnome/conversation-panel.h:
	* src/fe-gnome/main-window.c:
	  - Display a red marker line showing messages since last
	    focus. (#330150)
	* src/fe-gnome/preferences-page-irc.c:
	* src/fe-gnome/preferences-page-irc.h:
	* data/preferences-dialog.glade:
	  - Add a option in the preference dialog for the marker
	    line.

Sat Jul  8 23:44:57 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/navigation-tree.c:
	  - Fix quick channel auto-join to support keys. (#347002)

Sat Jul  8 22:39:51 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/fe-gnome.c:
	  - Pop up the channels list dialog on connect if there are no
	    channels set to auto-join. (#346974)

Sat Jul  8 13:27:45 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* configure.ac:
	* NEWS:
	  - Update for 0.13

Sat Jul  8 12:55:46 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/irc-network-editor.c:
	  - Remove the key in the model if there is no value entered.

Fri Jul  7 19:02:56 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	  - Preserve the selected text and set it in the PRIMARY clipboard
	    when switching sessions, so you can copy text from the text entry
	    in one session and paste it into the entry for another. (#345356)

Fri Jul  7 16:52:45 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/text-entry.c:
	  - Remove some old, commented-out code.

Fri Jul  7 16:25:02 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/irc-network-editor.c:
	* src/fe-gnome/irc-network-editor.h:
	* data/irc-network-editor.glade:
	  - Add a "key" column to the channel autojoin list in the network